# SeizureTransformer

./: .gitignore  Dockerfile  LICENSE  README.md  requirements_time_step.txt  requirements_window.txt
time_step_level/: eval_test.py  get_dataset.py  model.py  train_sd.py
time_step_level/service/: handle_data.py  post_process.py  result.py
window_level/abnormal/: engine_for_finetuning_EEGPT.py  finetune_TUAB_EEGPT.sh  run_class_finetuning_EEGPT_change.py  st_model.py  st_train.py  st_tuab.sh  utils.py
window_level/abnormal/Modules/models/: EEGPT_mcae_finetune_change.py  EEGPT_mcae_finetune_change_tuev.py
window_level/abnormal/dataset_maker/: make_TUAB.py  tuab-process-error-files.txt
window_level/datasets/: prepare_sleep.py
window_level/sleep/: finetune_BENDR_SleepEDF.py  finetune_BIOT_SleepEDF.py  finetune_EEGPT_SleepEDF.py  finetune_LaBraM_SleepEDF.py  st_model.py  st_train.py  usleep_model.py  usleep_train.py
wu_2025/: pyproject.toml
wu_2025/src/wu_2025/: __main__.py  architecture.py  main.py  utils.py
